# agent-comms

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  PROTOCOL.md  README.md  REPO-AUDIT.md  agent-runner.sh  codex-wrap.py  comms.sh  pyproject.toml
.github/workflows/: test.yml
dashboard/: server.py  start.sh
docs/: 2026-05-21-hive-gap-fit-analysis.md  AGENTS.md  PROJECT_STATE.md
hive/: AGENTS.md  board.py  cell.py  config.py  fleet_stats.py  runner_scan.py  shell_write.py
hive/coordination/: AGENTS.md  beliefs.py  dag.py  evolution.py  leases.py  lifecycle.py  racing.py  reputation.py  router.py  stall_detector.py
hive/mcp/: __main__.py  server.py  tools.py
hive/transports/: jsonl.py  sqlite.py
tests/: AGENTS.md  test_beliefs.py  test_board.py  test_comms_cli.py  test_dag.py  test_dashboard_auth.py  test_evolution.py  test_fleet_stats.py  test_leases.py  test_lifecycle.py  test_lifecycle_reducer.py  test_mcp_server.py  test_mcp_tools.py  test_memory.py  test_racing.py  test_reputation.py  test_router.py  test_runner_scan.py  test_runtime_hardening.py  test_shell_write.py  test_sqlite_transport.py  test_stall_detector.py  test_workflow_e2e.py
