[project]
name = "hive-protocol"
version = "1.0.0"
description = "HIVE: Hierarchical Inter-agent Virtual Exchange protocol"
requires-python = ">=3.11"

[tool.pytest.ini_options]
timeout = 30
testpaths = ["tests"]

[tool.mypy]
strict = true
files = ["hive"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Test fixtures favor readable one-line cell construction over wrapping
"tests/*" = ["E501"]
